backend/backend.log

> Task :compileJava
/app/backend/src/main/java/com/jpcard/service/CardService.java:3: error: package com.fasterxml.jackson.databind does not exist
import com.fasterxml.jackson.databind.ObjectMapper;
                                     ^
/app/backend/src/main/java/com/jpcard/service/CardService.java:22: error: cannot find symbol
    private final ObjectMapper objectMapper;
                  ^
  symbol:   class ObjectMapper
  location: class CardService
/app/backend/src/main/java/com/jpcard/service/CardService.java:17: error: cannot find symbol
@RequiredArgsConstructor
^
  symbol:   class ObjectMapper
  location: class CardService
3 errors

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///app/backend/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  /app/backend/src/main/java/com/jpcard/service/CardService.java:22: error: cannot find symbol
      private final ObjectMapper objectMapper;
                    ^
    symbol:   class ObjectMapper
    location: class CardService
  /app/backend/src/main/java/com/jpcard/service/CardService.java:17: error: cannot find symbol
  @RequiredArgsConstructor
  ^
    symbol:   class ObjectMapper
    location: class CardService
  /app/backend/src/main/java/com/jpcard/service/CardService.java:3: error: package com.fasterxml.jackson.databind does not exist
  import com.fasterxml.jackson.databind.ObjectMapper;
                                       ^
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

BUILD FAILED in 12s
1 actionable task: 1 executed
